setup cors and auth
