# src/entities/user.entity.ts
@@ -4,6 +4,7 @@ import mongoose, { Schema, Document } from 'mongoose';
 // Create an interface for the User
 export interface IUser extends Document {
     name: string;
+    username: string;
     email: string;
     phone: string;
     password: string;
@@ -12,6 +13,7 @@ export interface IUser extends Document {
 // Create a schema for the User
 const UserSchema: Schema = new Schema({
     name: { type: String, required: true },
+    username: { type: String, required: true },
     email: { type: String, required: true, unique: true },
     phone: { type: String, required: false },
     password: { type: String, required: true },
